--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "yarn tsc",
+    "postinstall": "yarn build"
+  },
   "devDependencies": {
     "prettier": "^1.16.4",
     "tslint": "^5.13.1",
