feat: update server

--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
   },
   "devDependencies": {
     "prettier": "^1.16.4",
-    "tslint": "^5.13.1",
+    "tslint": "^5.14.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.4000"
   },
   "dependencies": {
-    "@nestjs/common": "^5.7.4",
-    "@nestjs/graphql": "^5.5.7",
-    "@nestjs/passport": "^5.1.0",
-    "@nestjs/swagger": "^2.5.1",
-    "@nestjs/typeorm": "^5.3.0",
-    "@nestjs/websockets": "^5.7.4",
+    "@nestjs/common": "^6.0.2",
+    "@nestjs/core": "^6.0.2",
+    "@nestjs/graphql": "^6.0.2",
+    "@nestjs/passport": "^6.0.0",
+    "@nestjs/platform-express": "^6.0.2",
+    "@nestjs/swagger": "^3.0.1",
+    "@nestjs/typeorm": "^6.0.0",
+    "@nestjs/websockets": "^6.0.2",
     "body-parser": "^1.18.3",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dataloader": "^1.4.0",
     "email-templates": "^5.0.4",
-    "helmet": "^3.15.1",
-    "idx": "^2.5.4",
-    "jsonwebtoken": "^8.5.0",
+    "helmet": "^3.16.0",
+    "idx": "^2.5.5",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "node-buffs": "^0.5.2",
@@ -42,7 +44,7 @@
     "ramda": "^0.26.1",
     "response-time": "^2.3.2",
     "rxjs": "^6.4.0",
-    "sharp": "^0.21.3",
+    "sharp": "^0.22.0",
     "socket.io": "^2.2.0",
     "typeorm": "^0.2.14"
   }
