--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.1",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
+  "types": "declaration/index.d.ts",
   "scripts": {
     "build": "yarn tsc",
     "build:watch": "yarn tsc -w",
     "postinstall": "yarn build"
   },
   "devDependencies": {
+    "@types/socket.io": "^2.1.2",
     "prettier": "^1.16.4",
     "tslint": "^5.14.0",
     "tslint-plugin-prettier": "^2.0.1",
@@ -23,18 +24,24 @@
     "@nestjs/graphql": "^6.0.2",
     "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.0.2",
-    "@nestjs/swagger": "^3.0.1",
+    "@nestjs/platform-socket.io": "^6.0.2",
+    "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.0.0",
     "@nestjs/websockets": "^6.0.2",
+    "apollo-server-express": "^2.4.8",
     "body-parser": "^1.18.3",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
+    "compression": "^1.7.4",
     "dataloader": "^1.4.0",
     "email-templates": "^5.0.4",
+    "express-rate-limit": "^3.4.0",
     "helmet": "^3.16.0",
     "idx": "^2.5.5",
+    "jsondiffpatch": "^0.3.11",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "lru-cache": "^5.1.1",
     "morgan": "^1.9.1",
     "node-buffs": "^0.5.2",
     "nodemailer": "^5.1.1",
@@ -46,6 +53,8 @@
     "rxjs": "^6.4.0",
     "sharp": "^0.22.0",
     "socket.io": "^2.2.0",
+    "socket.io-redis": "^5.2.0",
+    "type-graphql": "^0.17.0",
     "typeorm": "^0.2.14"
   }
 }
