--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@types/socket.io": "^2.1.2",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.0",
     "tslint": "^5.15.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.4.3"
@@ -23,6 +23,7 @@
     "@nestjs/common": "^6.1.0",
     "@nestjs/core": "^6.1.0",
     "@nestjs/graphql": "^6.0.5",
+    "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.1.0",
     "@nestjs/platform-socket.io": "^6.1.0",
@@ -38,7 +39,7 @@
     "dataloader": "^1.4.0",
     "email-templates": "^5.0.4",
     "express-rate-limit": "^3.4.0",
-    "graphql-type-json": "^0.2.4",
+    "graphql-type-json": "^0.3.0",
     "helmet": "^3.16.0",
     "idx": "^2.5.5",
     "jsondiffpatch": "^0.3.11",
