chore: update build scripts

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "module": "src/index.ts",
   "types": "declaration/index.d.ts",
   "scripts": {
+    "clean": "rm -rf ./dist && rm -rf ./declaration",
     "build": "yarn tsc",
+    "build:declaration": "yarn tsc --emitDeclarationOnly",
+    "build:declaration:watch": "yarn tsc -w --emitDeclarationOnly",
     "build:watch": "yarn tsc -w",
     "postinstall1": "yarn build",
     "test": "ENV=test jest",
@@ -55,6 +58,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "lru-cache": "^5.1.1",
+    "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
     "node-buffs": "^0.5.2",
     "nodemailer": "^6.1.1",
