feat: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asuna-node-server",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
@@ -16,13 +16,13 @@
     "test:cov": "ENV=test jest --coverage --no-cache"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.1.1",
-    "@types/jest": "^24.0.12",
+    "@nestjs/testing": "^6.2.0",
+    "@types/jest": "^24.0.13",
     "@types/passport": "^1.0.0",
     "@types/socket.io": "^2.1.2",
     "jest": "^24.8.0",
-    "prettier": "^1.17.0",
-    "sqlite3": "^4.0.7",
+    "prettier": "^1.17.1",
+    "sqlite3": "^4.0.8",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
@@ -30,17 +30,19 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "@nestjs/common": "^6.1.1",
-    "@nestjs/core": "^6.1.1",
-    "@nestjs/graphql": "^6.0.5",
-    "@nestjs/jwt": "^6.0.0",
-    "@nestjs/passport": "^6.0.0",
-    "@nestjs/platform-express": "^6.1.1",
-    "@nestjs/platform-socket.io": "^6.1.1",
-    "@nestjs/platform-ws": "^6.1.1",
+    "@godaddy/terminus": "^4.1.0",
+    "@nestjs/common": "^6.2.0",
+    "@nestjs/core": "^6.2.0",
+    "@nestjs/graphql": "^6.2.1",
+    "@nestjs/jwt": "^6.1.0",
+    "@nestjs/passport": "^6.1.0",
+    "@nestjs/platform-express": "^6.2.0",
+    "@nestjs/platform-socket.io": "^6.2.0",
+    "@nestjs/platform-ws": "^6.2.0",
     "@nestjs/swagger": "^3.0.2",
-    "@nestjs/typeorm": "^6.1.0",
-    "@nestjs/websockets": "^6.1.1",
+    "@nestjs/terminus": "^6.1.5",
+    "@nestjs/typeorm": "^6.1.1",
+    "@nestjs/websockets": "^6.2.0",
     "apollo-server-express": "^2.5.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.2",
@@ -59,7 +61,7 @@
     "lru-cache": "^5.1.1",
     "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
-    "node-buffs": "^0.5.4",
+    "node-buffs": "^0.6.0",
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -70,7 +72,7 @@
     "sharp": "^0.22.1",
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
-    "type-graphql": "^0.17.3",
+    "type-graphql": "^0.17.4",
     "typeorm": "^0.2.17"
   }
 }
