--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asuna-node-server",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
@@ -16,7 +16,7 @@
     "test:cov": "ENV=test jest --coverage --no-cache"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.2.0",
+    "@nestjs/testing": "^6.2.4",
     "@types/jest": "^24.0.13",
     "@types/passport": "^1.0.0",
     "@types/socket.io": "^2.1.2",
@@ -25,32 +25,32 @@
     "sqlite3": "^4.0.8",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.16.0",
+    "tslint": "^5.17.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
   "dependencies": {
-    "@godaddy/terminus": "^4.1.0",
-    "@nestjs/common": "^6.2.0",
-    "@nestjs/core": "^6.2.0",
+    "@godaddy/terminus": "^4.1.2",
+    "@nestjs/common": "^6.2.4",
+    "@nestjs/core": "^6.2.4",
     "@nestjs/graphql": "^6.2.1",
-    "@nestjs/jwt": "^6.1.0",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.2.0",
-    "@nestjs/platform-socket.io": "^6.2.0",
-    "@nestjs/platform-ws": "^6.2.0",
+    "@nestjs/platform-express": "^6.2.4",
+    "@nestjs/platform-socket.io": "^6.2.4",
+    "@nestjs/platform-ws": "^6.2.4",
     "@nestjs/swagger": "^3.0.2",
-    "@nestjs/terminus": "^6.1.5",
+    "@nestjs/terminus": "^6.2.0-rc.0",
     "@nestjs/typeorm": "^6.1.1",
-    "@nestjs/websockets": "^6.2.0",
-    "apollo-server-express": "^2.5.0",
+    "@nestjs/websockets": "^6.2.4",
+    "apollo-server-express": "^2.6.0",
     "body-parser": "^1.19.0",
-    "class-transformer": "^0.2.2",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
-    "email-templates": "^5.0.5",
-    "express-rate-limit": "^3.5.1",
+    "email-templates": "^5.1.0",
+    "express-rate-limit": "^4.0.3",
     "graphql": "^14.3.1",
     "graphql-type-json": "^0.3.0",
     "helmet": "^3.18.0",
@@ -62,7 +62,7 @@
     "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
     "node-buffs": "^0.6.0",
-    "nodemailer": "^6.1.1",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "qiniu": "^7.2.1",
