--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asuna-node-server",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
@@ -16,7 +16,7 @@
     "test:cov": "ENV=test jest --coverage --no-cache"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.2.4",
+    "@nestjs/testing": "^6.3.1",
     "@types/jest": "^24.0.13",
     "@types/passport": "^1.0.0",
     "@types/socket.io": "^2.1.2",
@@ -31,18 +31,18 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.1.2",
-    "@nestjs/common": "^6.2.4",
-    "@nestjs/core": "^6.2.4",
-    "@nestjs/graphql": "^6.2.1",
+    "@nestjs/common": "^6.3.1",
+    "@nestjs/core": "^6.3.1",
+    "@nestjs/graphql": "^6.2.4",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.2.4",
-    "@nestjs/platform-socket.io": "^6.2.4",
-    "@nestjs/platform-ws": "^6.2.4",
+    "@nestjs/platform-express": "^6.3.1",
+    "@nestjs/platform-socket.io": "^6.3.1",
+    "@nestjs/platform-ws": "^6.3.1",
     "@nestjs/swagger": "^3.0.2",
-    "@nestjs/terminus": "^6.2.0-rc.0",
-    "@nestjs/typeorm": "^6.1.1",
-    "@nestjs/websockets": "^6.2.4",
+    "@nestjs/terminus": "^6.3.1",
+    "@nestjs/typeorm": "^6.1.2",
+    "@nestjs/websockets": "^6.3.1",
     "apollo-server-express": "^2.6.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
@@ -65,7 +65,7 @@
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "qiniu": "^7.2.1",
+    "qiniu": "^7.2.2",
     "ramda": "^0.26.1",
     "response-time": "^2.3.2",
     "rxjs": "^6.5.2",
@@ -73,6 +73,6 @@
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
     "type-graphql": "^0.17.4",
-    "typeorm": "^0.2.17"
+    "typeorm": "^0.2.18"
   }
 }
