--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "devDependencies": {
     "@nestjs/testing": "^6.3.1",
     "@types/jest": "^24.0.13",
+    "@types/minio": "^7.0.2",
     "@types/passport": "^1.0.0",
     "@types/socket.io": "^2.1.2",
     "jest": "^24.8.0",
-    "prettier": "^1.18.0",
+    "prettier": "^1.18.2",
     "sqlite3": "^4.0.8",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
@@ -59,6 +60,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "lru-cache": "^5.1.1",
+    "minio": "^7.0.8",
     "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
     "node-buffs": "^0.6.1",
