--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-rate-limit": "^5.0.0",
     "graphql": "^14.3.1",
     "graphql-type-json": "^0.3.0",
+    "hashids": "^1.2.2",
     "helmet": "^3.18.0",
     "idx": "^2.5.6",
     "jsondiffpatch": "^0.3.11",
@@ -65,13 +66,16 @@
     "morgan": "^1.9.1",
     "node-buffs": "^0.6.2",
     "nodemailer": "^6.2.1",
+    "otplib": "^11.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "qiniu": "^7.2.2",
+    "qrcode": "^1.3.3",
     "ramda": "^0.26.1",
     "response-time": "^2.3.2",
     "rxjs": "^6.5.2",
     "sharp": "^0.22.1",
+    "shortid": "^2.2.14",
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
     "type-graphql": "^0.17.4",
