--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prebuild": "yarn clean",
     "postinstall": "yarn build",
     "test": "ENV=test jest",
-    "test:cov": "ENV=test jest --coverage --no-cache"
+    "test:cov": "ENV=test jest --coverage --no-cache",
+    "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.3.1",
