--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asuna-node-server",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
@@ -8,6 +8,7 @@
   "types": "declaration/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./declaration",
+    "tsc": "tsc",
     "build": "yarn tsc",
     "build:declaration": "yarn tsc --emitDeclarationOnly",
     "prebuild": "yarn clean",
@@ -80,6 +81,7 @@
     "socket.io": "^2.2.0",
     "socket.io-redis": "^5.2.0",
     "type-graphql": "^0.17.4",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "url-join": "^4.0.0"
   }
 }
