--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,17 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "moduleResolution": "node",
-    "declaration": true,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "noLib": false,
-    "allowSyntheticDefaultImports": true, // * as Comp -> Comp
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "target": "esnext",
-    "skipLibCheck": true,
+    "module": "esnext",
+    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "strict": false, // TODO
     "sourceMap": true,
-    "inlineSources": true,
-    "allowJs": false,
-    "outDir": "./dist",
-    "declarationDir": "./declaration",
-    "baseUrl": "./src",
-    "lib": ["esnext", "dom"]
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "outDir": "dist",
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["./output", "./docs", "./dist", "node_modules"]
+  "include": ["src"]
 }
