--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "esnext",
-    "module": "esnext",
+    "module": "commonjs",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": false, // TODO
     "sourceMap": true,
