--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "commonjs",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": false, // TODO
+    "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
@@ -12,5 +13,11 @@
     "emitDecoratorMetadata": true,
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
