--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
     "build": "yarn tsc",
-    "prebuild": "yarn clean",
+    "prebuild-ignore": "yarn clean",
     "postinstall": "yarn build",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.3.2",
+    "@types/common-tags": "^1.8.0",
     "@types/jest": "^24.0.15",
     "@types/minio": "^7.0.2",
     "@types/passport": "^1.0.0",
@@ -40,21 +41,22 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.3.2",
-    "@nestjs/platform-socket.io": "^6.3.1",
+    "@nestjs/platform-socket.io": "^6.3.2",
     "@nestjs/platform-ws": "^6.3.2",
     "@nestjs/swagger": "^3.0.2",
-    "@nestjs/terminus": "^6.3.3",
+    "@nestjs/terminus": "^6.3.4",
     "@nestjs/typeorm": "^6.1.2",
     "@nestjs/websockets": "^6.3.2",
-    "apollo-server-express": "^2.6.6",
+    "apollo-server-express": "^2.6.7",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
+    "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
     "email-templates": "^6.0.0",
     "express-rate-limit": "^5.0.0",
-    "graphql": "^14.3.1",
+    "graphql": "^14.4.1",
     "graphql-type-json": "^0.3.0",
     "hashids": "^1.2.2",
     "helmet": "^3.18.0",
