--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.3.2",
     "@types/common-tags": "^1.8.0",
+    "@types/graphql": "^14.2.2",
     "@types/jest": "^24.0.15",
     "@types/minio": "^7.0.2",
     "@types/passport": "^1.0.0",
@@ -56,7 +57,7 @@
     "dataloader": "^1.4.0",
     "email-templates": "^6.0.0",
     "express-rate-limit": "^5.0.0",
-    "graphql": "^14.4.1",
+    "graphql": "^14.3.1",
     "graphql-type-json": "^0.3.0",
     "hashids": "^1.2.2",
     "helmet": "^3.18.0",
