feat: add job system to hermes

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "asuna-node-server",
-  "version": "0.2.16",
+  "version": "0.2.17",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
-    "build": "yarn tsc",
+    "build-ignore": "yarn tsc",
     "prebuild-ignore": "yarn clean",
-    "postinstall": "yarn build",
+    "postinstall-ignore": "yarn build",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.3.2",
+    "@types/bull": "^3.5.15",
     "@types/common-tags": "^1.8.0",
     "@types/graphql": "^14.2.2",
     "@types/jest": "^24.0.15",
@@ -50,6 +50,7 @@
     "@nestjs/websockets": "^6.3.2",
     "apollo-server-express": "^2.6.7",
     "body-parser": "^1.19.0",
+    "bull": "^3.10.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "common-tags": "^1.8.0",
