--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "outDir": "dist",
-    "baseUrl": "src",
-    "incremental": true
+    "emitDeclarationOnly": true,
+    "declarationDir": "declaration",
+    "baseUrl": "src"
   },
   "include": [
     "src/**/*"
