refactor: config system

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,52 @@
+# --------------------------------------------------------------
+# Common
+# --------------------------------------------------------------
+
+#ADMIN_SECRET_KEY=
+#SECRET_KEY=
+# post json 的 body 大小
+PAYLOAD_LIMIT=50mb
+
+# --- redis ---
+REDIS_ENABLE=false
+REDIS_HOST=localhost
+REDIS_PORT=6379
+# (Optional)
+REDIS_PASSWORD=
+# (Optional)
+REDIS_DB=
+
+# redis 部分支持设置前缀来定义多个数据源
+#PREFIX_REDIS_ENABLE=false
+#PREFIX_REDIS_HOST=localhost
+#PREFIX_REDIS_PORT=6379
+#PREFIX_REDIS_PASSWORD=
+#PREFIX_REDIS_DB=
+
+# --- mysql ---
+TYPEORM_SYNCHRONIZE=true
+#TYPEORM_DEBUG=true
+# error | true
+TYPEORM_LOGGING=error
+# advanced-console | ...
+TYPEORM_LOGGER=
+
+TYPEORM_CONNECTION=mysql
+#TYPEORM_HOST=
+#TYPEORM_PORT=
+TYPEORM_DATABASE=db_crystal
+#TYPEORM_USERNAME=
+#TYPEORM_PASSWORD=
+
+# --- db-cache ---
+TYPEORM_CACHE=redis
+#TYPEORM_CACHE_ALWAYS_ENABLED=true
+TYPEORM_CACHE_OPTIONS={"host": "redis", "db": 0}
+TYPEORM_CACHE_DURATION=60000
+
+# --- ws ---
+WS_REDIS_DB=1
+
 # --- qiniu storage config ---
 #IMAGE|VIDEO|FILE_STORAGE=qiniu
 #IMAGE|VIDEO|FILE_QINIU_ACCESS_KEY=**********
@@ -10,9 +59,13 @@
 
 # --- minio storage config ---
 #IMAGE|VIDEO|FILE_STORAGE=minio
-#MINIO_ENABLE=       # true or false
-#MINIO_ENDPOINT=     # minio.domain.io
-#MINIO_PORT=         # 9000
-#MINIO_USE_SSL=      # true or false
+# true or false
+#MINIO_ENABLE=
+# minio.domain.io
+#MINIO_ENDPOINT=
+# 9000
+#MINIO_PORT=
+# true or false
+#MINIO_USE_SSL=
 #MINIO_ACCESS_KEY=
 #MINIO_SECRET_KEY=
