fix: redis config issue

--- a/.env.example
+++ b/.env.example
@@ -60,12 +60,12 @@ WS_REDIS_DB=1
 # --- minio storage config ---
 #IMAGE|VIDEO|FILE_STORAGE=minio
 # true or false
-#MINIO_ENABLE=
+MINIO_ENABLE=false
 # minio.domain.io
 #MINIO_ENDPOINT=
 # 9000
-#MINIO_PORT=
+MINIO_PORT=9000
 # true or false
-#MINIO_USE_SSL=
+MINIO_USE_SSL=false
 #MINIO_ACCESS_KEY=
 #MINIO_SECRET_KEY=
