fix: redis config issue

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ REDIS_PASSWORD=
 # (Optional)
 REDIS_DB=
 
+# other modules used
+WS_REDIS_DB=1
+JOB_REDIS_DB=2
+
 # redis 部分支持设置前缀来定义多个数据源
 #PREFIX_REDIS_ENABLE=false
 #PREFIX_REDIS_HOST=localhost
@@ -43,9 +47,6 @@ TYPEORM_CACHE=redis
 #TYPEORM_CACHE_ALWAYS_ENABLED=true
 TYPEORM_CACHE_OPTIONS={"host": "redis", "db": 0}
 TYPEORM_CACHE_DURATION=60000
-
-# --- ws ---
-WS_REDIS_DB=1
 
 # --- qiniu storage config ---
 #IMAGE|VIDEO|FILE_STORAGE=qiniu
