feat: enable swagger

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,11 @@
 
 #ADMIN_SECRET_KEY=
 #SECRET_KEY=
-# post json 的 body 大小
+# endpoint is /swagger
+SWAGGER=false
+# default: 5000
+PORT=5000
+# default: 1mb, post json 的 body 大小
 PAYLOAD_LIMIT=50mb
 
 # --- redis ---
@@ -17,7 +21,9 @@ REDIS_PASSWORD=
 REDIS_DB=
 
 # other modules used
+# default: 1
 WS_REDIS_DB=1
+# default: 2
 JOB_REDIS_DB=2
 
 # redis 部分支持设置前缀来定义多个数据源
@@ -36,17 +42,26 @@ TYPEORM_LOGGING=error
 TYPEORM_LOGGER=
 
 TYPEORM_CONNECTION=mysql
-#TYPEORM_HOST=
-#TYPEORM_PORT=
+TYPEORM_HOST=
+TYPEORM_PORT=
 TYPEORM_DATABASE=db_crystal
-#TYPEORM_USERNAME=
-#TYPEORM_PASSWORD=
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
 
 # --- db-cache ---
-TYPEORM_CACHE=redis
 #TYPEORM_CACHE_ALWAYS_ENABLED=true
-TYPEORM_CACHE_OPTIONS={"host": "redis", "db": 0}
-TYPEORM_CACHE_DURATION=60000
+
+# type: database
+#TYPEORM_CACHE=database
+#TYPEORM_TABLE_NAME=query-result-cache
+
+# type: redis
+#TYPEORM_CACHE=redis
+#TYPEORM_CACHE_OPTIONS={"host": "redis", "db": 0}
+#TYPEORM_CACHE_DURATION=60000
+
+# type: ioredis/cluster
+#TYPEORM_CACHE=ioredis/cluster
 
 # --- qiniu storage config ---
 #IMAGE|VIDEO|FILE_STORAGE=qiniu
