feat: add chunks uploader api

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,16 @@
 # --------------------------------------------------------------
 
 #ADMIN_SECRET_KEY=
+# default: secret
 #SECRET_KEY=
-# endpoint is /swagger
+# ; endpoint is /swagger
 SWAGGER=false
 # default: 5000
 PORT=5000
-# default: 1mb, post json 的 body 大小
+# default: 1mb; post json 的 body 大小
 PAYLOAD_LIMIT=50mb
+# default: 3
+UPLOADER_MAX_COUNT=10
 
 # --- redis ---
 REDIS_ENABLE=false
@@ -71,10 +74,14 @@ TYPEORM_PASSWORD=
 #IMAGE|VIDEO|FILE_QINIU_PREFIX=http://www.example.com
 
 # --- local storage config ---
-#IMAGE|VIDEO|FILE_STORAGE=local
+#IMAGE|VIDEO|FILE_STORAGE=local|minio|qiniu
+
+IMAGE_STORAGE=
+VIDEO_STORAGE=
+FILE_STORAGE=
+CHUNK_STORAGE=
 
 # --- minio storage config ---
-#IMAGE|VIDEO|FILE_STORAGE=minio
 # true or false
 MINIO_ENABLE=false
 # minio.domain.io
