--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/graphql": "^14.2.2",
     "@types/jest": "^24.0.15",
     "@types/minio": "^7.0.2",
+    "@types/multer": "^1.3.7",
     "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
     "@types/socket.io": "^2.1.2",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
@@ -72,6 +74,7 @@
     "minio": "^7.0.10",
     "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "node-buffs": "^0.6.4",
     "nodemailer": "^6.2.1",
     "otplib": "^11.0.1",
