--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/multer": "^1.3.7",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
+    "@types/sharp": "^0.22.2",
     "@types/socket.io": "^2.1.2",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
