feat: add @nestjs/cqrs

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "asuna-node-server",
-  "version": "0.2.22",
+  "version": "0.3.0-beta1",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
-  "main": "src/index.ts",
+  "main": "index.ts",
   "types": "declaration/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./declaration",
@@ -46,10 +46,12 @@
     "@godaddy/terminus": "^4.1.2",
     "@nestjs/common": "^6.5.2",
     "@nestjs/core": "^6.5.2",
-    "@nestjs/graphql": "^6.2.5",
+    "@nestjs/cqrs": "^6.0.0",
+    "@nestjs/graphql": "^6.3.0",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.5.2",
+    "@nestjs/platform-fastify": "^6.5.2",
     "@nestjs/platform-socket.io": "^6.5.2",
     "@nestjs/platform-ws": "^6.5.2",
     "@nestjs/swagger": "^3.0.2",
