feat: add fastify file interceptor

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asuna-node-server",
-  "version": "0.3.0-beta1",
+  "version": "0.3.0-beta2",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "index.ts",
@@ -29,8 +29,10 @@
     "@types/multer": "^1.3.7",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
+    "@types/pump": "^1.1.0",
     "@types/sharp": "^0.22.2",
     "@types/socket.io": "^2.1.2",
+    "@types/uuid": "^3.4.5",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "sqlite3": "^4.0.9",
@@ -47,7 +49,7 @@
     "@nestjs/common": "^6.5.2",
     "@nestjs/core": "^6.5.2",
     "@nestjs/cqrs": "^6.0.0",
-    "@nestjs/graphql": "^6.3.0",
+    "@nestjs/graphql": "^6.3.1",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.5.2",
@@ -68,6 +70,9 @@
     "dataloader": "^1.4.0",
     "email-templates": "^6.0.0",
     "express-rate-limit": "^5.0.0",
+    "fastify": "^2.6.0",
+    "fastify-multipart": "^1.0.1",
+    "fastify-swagger": "^2.4.0",
     "file-type": "^12.0.1",
     "graphql": "^14.4.2",
     "graphql-type-json": "^0.3.0",
@@ -89,6 +94,7 @@
     "otplib": "^11.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "pump": "^3.0.0",
     "qiniu": "^7.2.2",
     "qrcode": "^1.4.0",
     "ramda": "^0.26.1",
