docs: update env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # --------------------------------------------------------------
-# Common
+# Core
 # --------------------------------------------------------------
 
 #ADMIN_SECRET_KEY=
@@ -92,3 +92,7 @@ MINIO_PORT=9000
 MINIO_USE_SSL=false
 #MINIO_ACCESS_KEY=
 #MINIO_SECRET_KEY=
+
+# --------------------------------------------------------------
+# Customize
+# --------------------------------------------------------------
