refactor: fastify support

--- a/package.json
+++ b/package.json
@@ -67,19 +67,25 @@
     "class-validator": "^0.9.1",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dataloader": "^1.4.0",
+    "dns-prefetch-control": "^0.2.0",
     "email-templates": "^6.0.0",
     "express-rate-limit": "^5.0.0",
     "fastify": "^2.6.0",
     "fastify-multipart": "^1.0.1",
     "fastify-swagger": "^2.4.0",
     "file-type": "^12.0.1",
+    "frameguard": "^3.1.0",
     "graphql": "^14.4.2",
     "graphql-type-json": "^0.3.0",
     "hashids": "^1.2.2",
     "helmet": "^3.18.0",
+    "hide-powered-by": "^1.1.0",
     "highland": "^3.0.0-beta.10",
+    "hsts": "^2.2.0",
     "idx": "^2.5.6",
+    "ienoopen": "^1.1.0",
     "jsondiffpatch": "^0.3.11",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.14",
@@ -106,6 +112,7 @@
     "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.0.7",
     "type-graphql": "^0.17.4",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "x-xss-protection": "^1.2.0"
   }
 }
