--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
+    // Target latest version of ECMAScript.
     "target": "esnext",
-    "module": "commonjs",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
-    "strict": false, // TODO
+    // Search under node_modules for non-relative imports.
+    "moduleResolution": "node",
+    // Enable strictest settings like strictNullChecks & noImplicitAny. :P
+    "strict": false,
+    // Disallow features that require cross-file information for emit.
+    //"isolatedModules": true,
+    // Import non-ES modules as default imports.
+    //"esModuleInterop": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
