chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -49,43 +49,35 @@
     "@nestjs/common": "^6.5.2",
     "@nestjs/core": "^6.5.2",
     "@nestjs/cqrs": "^6.0.0",
-    "@nestjs/graphql": "^6.3.1",
+    "@nestjs/graphql": "^6.4.1",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.5.2",
     "@nestjs/platform-fastify": "^6.5.2",
     "@nestjs/platform-socket.io": "^6.5.2",
     "@nestjs/platform-ws": "^6.5.2",
-    "@nestjs/swagger": "^3.0.2",
-    "@nestjs/terminus": "^6.4.0",
-    "@nestjs/typeorm": "^6.1.2",
+    "@nestjs/swagger": "^3.1.0",
+    "@nestjs/terminus": "^6.5.0",
+    "@nestjs/typeorm": "^6.1.3",
     "@nestjs/websockets": "^6.5.2",
-    "apollo-server-express": "^2.6.9",
+    "apollo-server-express": "^2.7.0",
     "body-parser": "^1.19.0",
     "bull": "^3.10.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "dataloader": "^1.4.0",
-    "dns-prefetch-control": "^0.2.0",
     "email-templates": "^6.0.0",
     "express-rate-limit": "^5.0.0",
-    "fastify": "^2.6.0",
-    "fastify-multipart": "^1.0.1",
     "fastify-swagger": "^2.4.0",
     "file-type": "^12.0.1",
-    "frameguard": "^3.1.0",
     "graphql": "^14.4.2",
     "graphql-type-json": "^0.3.0",
     "hashids": "^1.2.2",
     "helmet": "^3.18.0",
-    "hide-powered-by": "^1.1.0",
     "highland": "^3.0.0-beta.10",
-    "hsts": "^2.2.0",
     "idx": "^2.5.6",
-    "ienoopen": "^1.1.0",
     "jsondiffpatch": "^0.3.11",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.14",
@@ -94,9 +86,9 @@
     "minio": "^7.0.10",
     "module-alias": "^2.2.0",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1",
+    "multer": "^1.4.2",
     "node-buffs": "^0.6.4",
-    "nodemailer": "^6.2.1",
+    "nodemailer": "^6.3.0",
     "otplib": "^11.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
@@ -112,7 +104,6 @@
     "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.0.7",
     "type-graphql": "^0.17.4",
-    "typeorm": "^0.2.18",
-    "x-xss-protection": "^1.2.0"
+    "typeorm": "^0.2.18"
   }
 }
