refactor: qiniu storage config

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 #ADMIN_SECRET_KEY=
 # default: secret
-#SECRET_KEY=
+SECRET_KEY=secret
 # ; endpoint is /swagger
 SWAGGER=false
 # default: 5000
@@ -37,6 +37,8 @@ JOB_REDIS_DB=2
 #PREFIX_REDIS_DB=
 
 # --- mysql ---
+# default: mysql57; mysql56 | mysql57 | postgres
+DB_TYPE=mysql57
 TYPEORM_SYNCHRONIZE=true
 #TYPEORM_DEBUG=true
 # error | true
@@ -67,19 +69,19 @@ TYPEORM_PASSWORD=
 #TYPEORM_CACHE=ioredis/cluster
 
 # --- qiniu storage config ---
-#IMAGE|VIDEO|FILE_STORAGE=qiniu
-#IMAGE|VIDEO|FILE_QINIU_ACCESS_KEY=**********
-#IMAGE|VIDEO|FILE_QINIU_SECRET_KEY=**********
-#IMAGE|VIDEO|FILE_QINIU_BUCKET_NAME=test-bucket
-#IMAGE|VIDEO|FILE_QINIU_PREFIX=http://www.example.com
+#IMAGES|VIDEOS|FILES_STORAGE=qiniu
+#IMAGES|VIDEOS|FILES_QINIU_ACCESS_KEY=**********
+#IMAGES|VIDEOS|FILES_QINIU_SECRET_KEY=**********
+#IMAGES|VIDEOS|FILES_QINIU_BUCKET_NAME=test-bucket
+#IMAGES|VIDEOS|FILES_QINIU_PREFIX=http://www.example.com
 
 # --- local storage config ---
-#IMAGE|VIDEO|FILE_STORAGE=local|minio|qiniu
+#IMAGES|VIDEOS|FILES|CHUNKS_STORAGE=local|minio|qiniu
 
-IMAGE_STORAGE=
-VIDEO_STORAGE=
-FILE_STORAGE=
-CHUNK_STORAGE=
+IMAGES_STORAGE=
+VIDEOS_STORAGE=
+FILES_STORAGE=
+CHUNKS_STORAGE=
 
 # --- minio storage config ---
 # true or false
@@ -92,6 +94,14 @@ MINIO_PORT=9000
 MINIO_USE_SSL=false
 #MINIO_ACCESS_KEY=
 #MINIO_SECRET_KEY=
+
+# --- mail ---
+MAIL_HOST=
+MAIL_PORT=465
+MAIL_SSL=false
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=
 
 # --------------------------------------------------------------
 # Customize
