--- a/.env.test
+++ b/.env.test
@@ -9,5 +9,5 @@ TYPEORM_SYNCHRONIZE=true
 TYPEORM_ENTITIES=src/domains/**/*.ts,src/entities/**/*.ts,src/modules/**/*.entities.ts
 
 # --- storage ---
-# VIDEO_STORAGE=qiniu|local
-# IMAGE_STORAGE=qiniu|local
+# VIDEOS_STORAGE=qiniu|local
+# IMAGES_STORAGE=qiniu|local
