fix: qiniu url resolver issue

--- a/.env.example
+++ b/.env.example
@@ -73,7 +73,8 @@ TYPEORM_PASSWORD=
 #IMAGES|VIDEOS|FILES_QINIU_ACCESS_KEY=**********
 #IMAGES|VIDEOS|FILES_QINIU_SECRET_KEY=**********
 #IMAGES|VIDEOS|FILES_QINIU_BUCKET_NAME=test-bucket
-#IMAGES|VIDEOS|FILES_QINIU_PREFIX=http://www.example.com
+#IMAGES|VIDEOS|FILES_QINIU_PREFIX=/uploads/images
+#IMAGES|VIDEOS|FILES_QINIU_DOMAIN=http://www.example.com
 
 # --- local storage config ---
 #IMAGES|VIDEOS|FILES|CHUNKS_STORAGE=local|minio|qiniu
