--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ PORT=5000
 PAYLOAD_LIMIT=50mb
 # default: 3
 UPLOADER_MAX_COUNT=10
+# default: /uploads
+RESOURCE_PATH=/uploads
 
 # --- redis ---
 REDIS_ENABLE=false
