refactor: add transform for classes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bluebird": "^3.5.27",
     "@types/bull": "^3.10.0",
     "@types/common-tags": "^1.8.0",
+    "@types/date-fns": "^2.6.0",
     "@types/fs-extra": "^8.0.0",
     "@types/graphql": "^14.2.2",
     "@types/highland": "^2.12.3",
@@ -68,6 +69,8 @@
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
+    "date-fns": "^1.30.1",
+    "dayjs": "^1.8.15",
     "email-templates": "^6.0.0",
     "express-rate-limit": "^5.0.0",
     "fastify-swagger": "^2.4.0",
