--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "declarationDir": "declaration",
     "baseUrl": "."
   },
-  "files": ["src/global.d.ts"],
+  "files": [
+    "@types/global.d.ts"
+  ],
   "include": ["index.ts", "src/**/*"],
   "exclude": ["**/node_modules/*", "**/*.spec.ts"]
 }
