feat: add mq provider

--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,22 @@ SECRET_KEY=secret
 SWAGGER=false
 # default: 5000
 PORT=5000
-# default: 1mb; post json 的 body 大小
+# default: 1mb ; post json 的 body 大小
 PAYLOAD_LIMIT=50mb
 # default: 3
 UPLOADER_MAX_COUNT=10
 # default: /uploads
 RESOURCE_PATH=/uploads
+
+# --- mq ---
+# default: false
+MQ_ENABLE=false
+# default: amqp://localhost ; 存在 url 时忽略其他参数
+MQ_URL=amqp://localhost
+#MQ_HOST=localhost
+#MQ_PORT=5672
+#MQ_PASSWORD=
+#MQ_USERNAME=
 
 # --- redis ---
 REDIS_ENABLE=false
@@ -39,18 +49,18 @@ JOB_REDIS_DB=2
 #PREFIX_REDIS_DB=
 
 # --- mysql ---
-# default: mysql57; mysql56 | mysql57 | postgres
+# default: mysql57 ; mysql56 | mysql57 | postgres
 DB_TYPE=mysql57
 TYPEORM_SYNCHRONIZE=true
 #TYPEORM_DEBUG=true
 # error | true
 TYPEORM_LOGGING=error
 # advanced-console | ...
-TYPEORM_LOGGER=
+TYPEORM_LOGGER=advanced-console
 
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=
-TYPEORM_PORT=
+#TYPEORM_PORT=
 TYPEORM_DATABASE=db_crystal
 TYPEORM_USERNAME=
 TYPEORM_PASSWORD=
