chore: add dev server

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
     "build": "yarn tsc",
+    "dev": "ts-node-dev src/dev.ts",
+    "dev:watch": "nodemon --exec ts-node-dev --respawn --transpileOnly src/dev.ts",
     "prebuild": "yarn clean",
     "postinstall": "yarn build",
     "test": "ENV=test jest",
@@ -34,10 +36,12 @@
     "@types/socket.io": "^2.1.2",
     "@types/uuid": "^3.4.5",
     "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "sqlite3": "^4.0.9",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
+    "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
