refactor: graphql service

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/testing": "^6.5.3",
     "@types/bluebird": "^3.5.27",
     "@types/bull": "^3.10.0",
+    "@types/cli-color": "^0.3.29",
     "@types/common-tags": "^1.8.0",
     "@types/fs-extra": "^8.0.0",
     "@types/graphql": "^14.2.2",
@@ -93,7 +94,7 @@
     "minio": "^7.0.10",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "node-buffs": "^0.6.5",
+    "node-buffs": "^0.6.7",
     "nodemailer": "^6.3.0",
     "otplib": "^11.0.1",
     "passport": "^0.4.0",
