refactor: logger level

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Core
 # --------------------------------------------------------------
 
+# default: false
+#DEBUG=true
+# default: info
+LOGGER_LEVEL=info
 #ADMIN_SECRET_KEY=
 # default: secret
 SECRET_KEY=secret
