feat: add downloader

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ PAYLOAD_LIMIT=50mb
 UPLOADER_MAX_COUNT=10
 # default: /uploads
 RESOURCE_PATH=/uploads
+# default: http://127.0.0.1:5000
+MASTER_ADDRESS=http://127.0.0.1:5000
 
 # --- mq ---
 # default: false
