--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@nestjs/typeorm": "^6.1.3",
     "@nestjs/websockets": "^6.5.3",
     "apollo-server-express": "^2.7.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bull": "^3.10.0",
     "class-transformer": "^0.2.3",
