refactor: add finder endpoint

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,10 @@ TYPEORM_PASSWORD=
 # type: ioredis/cluster
 #TYPEORM_CACHE=ioredis/cluster
 
+# --- assets endpoint
+ASSETS_ENDPOINT=
+ASSETS_INTERNAL_ENDPOINT=
+
 # --- qiniu storage config ---
 #IMAGES|VIDEOS|FILES_STORAGE=qiniu
 #IMAGES|VIDEOS|FILES_QINIU_ACCESS_KEY=**********
