chore: add xlsx dependency

--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "type-graphql": "^0.17.4",
     "typeorm": "^0.2.18",
     "validator": "^11.1.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xlsx": "^0.15.0"
   }
 }
