--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bull": "^3.10.2",
     "@types/cli-color": "^0.3.29",
     "@types/common-tags": "^1.8.0",
+    "@types/express": "^4.17.1",
     "@types/fs-extra": "^8.0.0",
     "@types/graphql": "^14.5.0",
     "@types/highland": "^2.12.3",
@@ -85,9 +86,11 @@
     "date-fns": "^2.0.1",
     "dayjs": "^1.8.15",
     "email-templates": "^6.0.0",
+    "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "fastify-swagger": "^2.4.0",
     "file-type": "^12.2.0",
+    "fs-extra": "^8.1.0",
     "graphql": "^14.5.3",
     "graphql-type-json": "^0.3.0",
     "hashids": "^1.2.2",
