feat: add audit toggle

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ LOGGER_LEVEL=info
 #ADMIN_SECRET_KEY=
 # default: secret
 SECRET_KEY=secret
+# 是否开启审计模式
+AUDIT=false
 # ; endpoint is /swagger
 SWAGGER=false
 # default: 5000
