--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@
 DB_TYPE=sqlite
 
 # --- sqlite ---
-TYPEORM_LOGGING=true
+TYPEORM_LOGGING=errror
 TYPEORM_CONNECTION=sqlite
 TYPEORM_DATABASE=:memory:
 TYPEORM_SYNCHRONIZE=true
