--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.5.3",
+    "@nestjs/testing": "^6.6.0",
     "@types/bluebird": "^3.5.27",
     "@types/bull": "^3.10.2",
     "@types/cli-color": "^0.3.29",
@@ -59,20 +59,20 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.1.2",
-    "@nestjs/common": "^6.5.3",
-    "@nestjs/core": "^6.5.3",
+    "@nestjs/common": "6.5.3",
+    "@nestjs/core": "6.5.3",
     "@nestjs/cqrs": "^6.0.1",
     "@nestjs/graphql": "^6.4.2",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.5.3",
-    "@nestjs/platform-fastify": "^6.5.3",
-    "@nestjs/platform-socket.io": "^6.5.3",
-    "@nestjs/platform-ws": "^6.5.3",
+    "@nestjs/platform-express": "6.6.0",
+    "@nestjs/platform-fastify": "^6.6.0",
+    "@nestjs/platform-socket.io": "^6.6.0",
+    "@nestjs/platform-ws": "^6.6.0",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/terminus": "^6.5.1",
     "@nestjs/typeorm": "^6.1.3",
-    "@nestjs/websockets": "^6.5.3",
+    "@nestjs/websockets": "^6.6.0",
     "apollo-server-express": "^2.9.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -84,7 +84,7 @@
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
     "date-fns": "^2.0.1",
-    "dayjs": "^1.8.15",
+    "dayjs": "^1.8.16",
     "email-templates": "^6.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
