feat: upgrade dependencies

--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,12 @@
+LOGGER_LEVEL=debug
 # SECRET_KEY=
 DB_TYPE=sqlite
 
 # --- sqlite ---
-TYPEORM_LOGGING=errror
+TYPEORM_LOGGING=error
 TYPEORM_CONNECTION=sqlite
 TYPEORM_DATABASE=:memory:
-TYPEORM_SYNCHRONIZE=true
+TYPEORM_SYNCHRONIZE=false
 
 # --- storage ---
 # VIDEOS_STORAGE=qiniu|local
