--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.2.0",
-    "@nestjs/common": "6.6.3",
-    "@nestjs/core": "6.6.3",
+    "@nestjs/common": "^6.6.3",
+    "@nestjs/core": "^6.6.3",
     "@nestjs/cqrs": "^6.0.1",
-    "@nestjs/graphql": "^6.4.3",
+    "@nestjs/graphql": "6.4.2",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "6.6.3",
