--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.6.3",
+    "@nestjs/testing": "^6.6.6",
     "@types/bluebird": "^3.5.27",
     "@types/bull": "^3.10.2",
     "@types/cli-color": "^0.3.29",
@@ -37,7 +37,7 @@
     "@types/sharp": "^0.22.2",
     "@types/socket.io": "^2.1.2",
     "@types/uuid": "^3.4.5",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb-typescript": "^4.0.1",
     "eslint-config-prettier": "^6.1.0",
@@ -59,21 +59,21 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.2.0",
-    "@nestjs/common": "^6.6.3",
-    "@nestjs/core": "^6.6.3",
+    "@nestjs/common": "6.6.6",
+    "@nestjs/core": "6.6.3",
     "@nestjs/cqrs": "^6.0.1",
     "@nestjs/graphql": "6.4.2",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "6.6.4",
-    "@nestjs/platform-fastify": "^6.6.3",
-    "@nestjs/platform-socket.io": "^6.6.3",
-    "@nestjs/platform-ws": "^6.6.3",
+    "@nestjs/platform-express": "^6.6.6",
+    "@nestjs/platform-fastify": "^6.6.6",
+    "@nestjs/platform-socket.io": "^6.6.6",
+    "@nestjs/platform-ws": "^6.6.6",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/terminus": "^6.5.1",
     "@nestjs/typeorm": "^6.1.3",
-    "@nestjs/websockets": "^6.6.3",
-    "apollo-server-express": "^2.9.2",
+    "@nestjs/websockets": "^6.6.6",
+    "apollo-server-express": "^2.9.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bull": "^3.10.0",
