--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.6.7",
+    "@nestjs/testing": "^6.7.1",
     "@types/bluebird": "^3.5.27",
     "@types/bull": "^3.10.2",
     "@types/cli-color": "^0.3.29",
@@ -47,7 +47,7 @@
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^10.0.0",
+    "eslint-plugin-unicorn": "^11.0.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
@@ -59,20 +59,20 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.2.0",
-    "@nestjs/common": "6.6.7",
+    "@nestjs/common": "^6.7.1",
     "@nestjs/core": "6.6.3",
     "@nestjs/cqrs": "^6.0.1",
     "@nestjs/graphql": "6.4.2",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.6.7",
-    "@nestjs/platform-fastify": "^6.6.7",
-    "@nestjs/platform-socket.io": "^6.6.7",
-    "@nestjs/platform-ws": "^6.6.7",
+    "@nestjs/platform-express": "^6.7.1",
+    "@nestjs/platform-fastify": "^6.7.1",
+    "@nestjs/platform-socket.io": "^6.7.1",
+    "@nestjs/platform-ws": "^6.7.1",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/terminus": "^6.5.1",
     "@nestjs/typeorm": "^6.1.3",
-    "@nestjs/websockets": "^6.6.7",
+    "@nestjs/websockets": "^6.7.1",
     "apollo-server-express": "^2.9.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -91,7 +91,7 @@
     "fastify-swagger": "^2.4.0",
     "file-type": "^12.3.0",
     "fs-extra": "^8.1.0",
-    "graphql": "^14.5.5",
+    "graphql": "^14.5.6",
     "graphql-type-json": "^0.3.0",
     "hashids": "^2.0.1",
     "helmet": "^3.21.0",
