--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 12.x
       - name: Build
         run: |
-          yarn && yarn build
+          yarn && yarn build --emitDeclarationOnly false
       - uses: actions/bin/filter@master
         if: startsWith(github.ref, 'v')
         with:
