--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
     "build": "yarn tsc",
-    "dev": "ts-node-dev src/dev.ts",
-    "dev:watch": "nodemon --exec ts-node-dev --respawn --transpileOnly src/dev.ts",
+    "dev": "ts-node --transpile-only src/dev.ts",
+    "dev:watch": "nodemon --exec ts-node --transpile-only src/dev.ts",
     "prebuild": "yarn clean",
     "postinstall": "yarn build",
     "test": "ENV=test jest",
@@ -17,7 +17,7 @@
     "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.7.1",
+    "@nestjs/testing": "^6.7.2",
     "@types/bluebird": "^3.5.27",
     "@types/bull": "^3.10.3",
     "@types/cli-color": "^0.3.29",
@@ -53,25 +53,24 @@
     "sqlite3": "^4.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
-    "ts-node-dev": "^1.0.0-pre.43",
     "typescript": "^3.6.3"
   },
   "dependencies": {
     "@godaddy/terminus": "^4.2.0",
-    "@nestjs/common": "^6.7.1",
-    "@nestjs/core": "6.6.3",
+    "@nestjs/common": "^6.7.2",
+    "@nestjs/core": "^6.7.2",
     "@nestjs/cqrs": "^6.0.1",
-    "@nestjs/graphql": "6.4.2",
+    "@nestjs/graphql": "^6.5.1",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.7.1",
-    "@nestjs/platform-fastify": "^6.7.1",
-    "@nestjs/platform-socket.io": "^6.7.1",
-    "@nestjs/platform-ws": "^6.7.1",
+    "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/platform-fastify": "^6.7.2",
+    "@nestjs/platform-socket.io": "^6.7.2",
+    "@nestjs/platform-ws": "^6.7.2",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/terminus": "^6.5.1",
     "@nestjs/typeorm": "^6.1.3",
-    "@nestjs/websockets": "^6.7.1",
+    "@nestjs/websockets": "^6.7.2",
     "apollo-server-express": "^2.9.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -90,10 +89,10 @@
     "fastify-swagger": "^2.4.0",
     "file-type": "^12.3.0",
     "fs-extra": "^8.1.0",
-    "graphql": "^14.5.6",
+    "graphql": "^14.5.7",
     "graphql-type-json": "^0.3.0",
     "hashids": "^2.0.1",
-    "helmet": "^3.21.0",
+    "helmet": "^3.21.1",
     "highland": "^3.0.0-beta.10",
     "idx": "^2.5.6",
     "jsondiffpatch": "^0.3.11",
@@ -117,7 +116,7 @@
     "rxjs": "^6.5.3",
     "sharp": "^0.23.0",
     "shortid": "^2.2.15",
-    "socket.io": "^2.2.0",
+    "socket.io": "^2.3.0",
     "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.1.1",
     "typeorm": "^0.2.19",
