refactor: remove connection helper

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/bull": "^3.10.5",
     "@types/cli-color": "^0.3.29",
     "@types/common-tags": "^1.8.0",
-    "@types/express": "^4.17.1",
+    "@types/express": "4.17.1",
     "@types/fs-extra": "^8.0.1",
     "@types/graphql": "^14.5.0",
     "@types/highland": "^2.12.4",
@@ -76,7 +76,7 @@
     "body-parser": "^1.19.0",
     "bull": "^3.11.0",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.2",
+    "class-validator": "^0.11.0",
     "cli-color": "^2.0.0",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
@@ -87,7 +87,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "fastify-swagger": "^2.4.0",
-    "file-type": "^12.3.1",
+    "file-type": "^12.4.0",
     "fs-extra": "^8.1.0",
     "graphql": "^14.5.8",
     "graphql-type-json": "^0.3.0",
