chore: remove postinstall hook

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "ts-node --transpile-only src/dev.ts",
     "dev:watch": "nodemon --exec ts-node --transpile-only src/dev.ts",
     "prebuild": "yarn clean",
-    "postinstall": "yarn build",
+    "postinstall!": "yarn build",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./"
@@ -74,14 +74,14 @@
     "apollo-server-express": "^2.9.7",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "bull": "^3.11.0",
+    "bull": "^3.12.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cli-color": "^2.0.0",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
-    "date-fns": "^2.6.0",
+    "date-fns": "^2.7.0",
     "dayjs": "^1.8.17",
     "email-templates": "^6.0.3",
     "express": "^4.17.1",
