--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@types/graphql": "^14.5.0",
     "@types/highland": "^2.12.4",
     "@types/jest": "^24.0.23",
+    "@types/lru-cache": "^5.1.0",
     "@types/mime-types": "^2.1.0",
-    "@types/minio": "^7.0.3",
+    "@types/minio": "^7.0.4",
     "@types/multer": "^1.3.10",
-    "@types/passport": "^1.0.1",
+    "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/sharp": "^0.23.0",
@@ -81,7 +82,7 @@
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.7.0",
+    "date-fns": "^2.8.0",
     "dayjs": "^1.8.17",
     "email-templates": "^6.0.3",
     "express": "^4.17.1",
